--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,15 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:$supportLibVersion"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    // Lifecycle
+    def lifecycleVersion = '2.0.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+
+    // Paging Library
+    def pagingLibVersion = '2.1.0'
+    implementation "androidx.paging:paging-runtime-ktx:$pagingLibVersion"
+    implementation "androidx.paging:paging-rxjava2-ktx:$pagingLibVersion"
+
     // Dagger
     def daggerVersion = '2.16'
     implementation "com.google.dagger:dagger:$daggerVersion"
