PostEditActivity -> EditPostActivity 이름 변경

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
       </intent-filter>
     </activity>
     <activity android:name=".ui.details.DetailsActivity" />
-    <activity android:name=".ui.postedit.PostEditActivity" />
+    <activity android:name=".ui.edit.EditPostActivity" />
   </application>
 
 </manifest>
